[package]
name = "LingoChamp"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "lingochamp"
path = "server/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
chrono = "0.4.31"
socketioxide = "0.6.0"
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
futures = "0.3.29"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
